<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_spacing">

    <ImageView
        android:id="@+id/avatar"
        app:layout_constraintBottom_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@sample/posts.json/data/authorAvatar"
        android:layout_width="@dimen/posts_avatar_size"
        android:layout_height="@dimen/posts_avatar_size"
        android:layout_marginBottom="@dimen/common_spacing"
        android:contentDescription="@string/description_post_author_avatar"
        android:src="@drawable/ic_netology_48dp" />

    <TextView
        android:id="@+id/author"
        app:layout_constraintBottom_toTopOf="@+id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true" />

    <TextView
        android:id="@+id/published"
        app:layout_constraintBottom_toBottomOf="@id/header"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="@sample/posts.json/data/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing" />

    <ImageButton
        android:id="@+id/menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_more_vert_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_menu" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/header"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        tools:text="@sample/posts.json/data/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:lineSpacingMultiplier="1.5"
        android:paddingTop="@dimen/common_spacing"
        android:paddingBottom="@dimen/common_spacing" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/footer"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageButton
        android:id="@+id/likes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/footer"
        app:srcCompat="@drawable/ic_like_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_likes" />

    <TextView
        android:id="@+id/likes_text"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginStart="3dp"
        android:layout_width="@dimen/views_size"
        android:layout_height="@dimen/views_size"
        app:layout_constraintTop_toBottomOf="@+id/content"
        app:layout_constraintStart_toEndOf="@id/likes"
        android:text="@sample/posts.json/data/likesCount" />

    <ImageButton
        android:id="@+id/shares"
        app:layout_constraintStart_toEndOf="@+id/likes"
        app:layout_constraintTop_toBottomOf="@id/footer"
        app:srcCompat="@drawable/ic_share_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_shares" />

    <TextView
        android:id="@+id/shares_text"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginStart="3dp"
        android:layout_width="@dimen/views_size"
        android:layout_height="@dimen/views_size"
        app:layout_constraintTop_toBottomOf="@+id/content"
        app:layout_constraintStart_toEndOf="@id/shares"
        android:text="@sample/posts.json/data/sharesCount" />

    <ImageView
        android:id="@+id/views"
        android:layout_width="@dimen/views_size"
        android:layout_height="@dimen/views_size"
        android:layout_marginEnd="3dp"
        android:layout_marginTop="19dp"
        app:layout_constraintTop_toBottomOf="@+id/content"
        app:layout_constraintEnd_toStartOf="@id/view_text"
        android:contentDescription="@string/description_post_views"
        android:src="@drawable/ic_baseline_visibility_24"
        android:clickable="true" />

    <TextView
        android:id="@+id/view_text"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_default"
        android:layout_width="@dimen/views_size"
        android:layout_height="@dimen/views_size"
        app:layout_constraintTop_toBottomOf="@+id/content"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@sample/posts.json/data/viewsCount" />

</androidx.constraintlayout.widget.ConstraintLayout>